feat: Implement initial fault diagnosis API with a controller, Ollama LLM, and Qdrant vector store integration, and update gitignore for new files.

--- a/.gitignore
+++ b/.gitignore
@@ -53,7 +53,5 @@ StyleCop.Cache
 
 # Qdrant storage (local volume)
 qdrant_storage/
-
-# Existing ignores
-/implementation_plan.md
-/task.md
+implementation_plan.md
+task.md
