--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.user
 *.userosscache
 *.sln.docstates
+/plans
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
@@ -53,5 +54,3 @@ StyleCop.Cache
 
 # Qdrant storage (local volume)
 qdrant_storage/
-implementation_plan.md
-task.md
