--- a/FaultDiagnosis.API/appsettings.json
+++ b/FaultDiagnosis.API/appsettings.json
@@ -1,9 +1,18 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "FaultDiagnosis": {
+    "OllamaUrl": "http://127.0.0.1:11434",
+    "QdrantUrl": "http://127.0.0.1:6334",
+    "EmbeddingModel": "nomic-embed-text",
+    "GenerationModel": "llama3.1"
+  }
 }
