--- a/FaultDiagnosis.Infrastructure/FaultDiagnosis.Infrastructure.csproj
+++ b/FaultDiagnosis.Infrastructure/FaultDiagnosis.Infrastructure.csproj
@@ -6,11 +6,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Http" Version="10.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="10.0.0" />
     <PackageReference Include="Qdrant.Client" Version="1.16.1" />
   </ItemGroup>
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
